2010-01-30  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPropertyList.m (GSBinaryPLParser -rootObject,
	-initWithData:mutability:): Get root index from the binary
	property list data and use this to return the root object.

2010-01-24 Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Option for using libbfd for stack traces
	* configure: regenerate
	* Headers/Additions/GNUstepBase/config.h.in: regenerate
	* Source/NSException.m: Re-instate code for using libbfd to provide
	symbolic stack traces (because the backtrace_symbols function doesn't
	work on most platforms).  Add warning about the fact that this alters
	the license of the library.

2010-01-23 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GSFFCallInvocation.m:
	* Source/NSZone.m:
	* Source/Additions/GSObjCRuntime.m:
	* Source/Additions/GCObject.m:
	* Source/synchronization.m:
	* Source/GSPThread.h:
	* Headers/Additions/GNUstepBase/GSObjCRuntime.h:
	Updates for switch to using pthreads

2010-01-21 Eric Wasylishen <ewasylishen@gmail.com>

	* Headers/Foundation/NSObjCRuntime.h: define CGFLOAT_DEFINED when
	defining CGFloat.
	Also check that NSINTEGER_DEFINED and CGFLOAT_DEFINED are undefined
	before defining NSInterger and CGFloat.

2010-01-21 16:20-EST Gregory John Casamento <greg.casamento@gmail.com>

	* install.sh: Add --with-installation-domain=SYSTEM to the script
	to allow automated build on Windows.

2010-01-20 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTask.m:
	Always remove task from controlling terminal, not just when using
	pseudo-terminals.  This is compatible with OSX behavior
	(testcase added to the testsuite).
	Also remove some redundant/duplicate code

2010-01-11 Quentin Mathe <quentin.mathe@gmail.com>

	* Source/NSFormatter.m (-copyWithZone:, -initWithCoder:, 
	-encodeWithCoder:): Removed the subclass responsibility,
	in order to have subclasses automatically coding and copying
	compliant as Cocoa does.